--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,17 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.css">
   </head>
   <body>
-    test
     <section id="sideMenu">
         <nav>
-          <a href="#">Item</a>
-          <a href="#">Item</a>
-          <a href="#">Item</a>
-          <a href="#">Item</a>
-          <a href="#">Item</a>
-          <a href="#">Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>notes</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
         </nav>
     </section>
 
