--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <section id="sideMenu">
         <nav>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>notes</a>
-          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>something</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>thing</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
