--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <nav>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>notes</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>thing</a>
-          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
+          <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>thing2</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
           <a href="#"><i class="fa fa-sticky-note-o" aria-hidden="true"></i>Item</a>
